# SIL

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sil-ci.yml  sil.yml
ai-agent/: agent.py
ai-agent/actions/: fix_suggester.py  refactor_advisor.py
ai-agent/memory/: event_store.py  pattern_db.py
ai-agent/reasoning/: analyzer.py  predictor.py
api/: main.py
api/sil_api/: core_bridge.py  main.py
api/sil_api/routes/: analyze.py  health.py  scan.py
crates/sil/: Cargo.toml
crates/sil-cli/: Cargo.toml
crates/sil-cli/src/: commands.rs  formatter.rs  main.rs
crates/sil-confusable/: Cargo.toml
crates/sil-confusable/src/: detector.rs  lib.rs  score.rs  unicode_map.rs
crates/sil-normalizer/: Cargo.toml
crates/sil-normalizer/src/: detect.rs  lib.rs  normalize.rs
crates/sil-policy/: Cargo.toml
crates/sil-policy/src/: decision.rs  engine.rs  lib.rs  rules.rs
crates/sil-semantic/: Cargo.toml
crates/sil-semantic/src/: cluster.rs  lib.rs  similarity.rs
crates/sil/src/: lib.rs
dashboard/: api_bridge.py  package-lock.json  package.json
dashboard/app/: page.tsx
dashboard/backend/: aggregator.py  collector.py  metrics.py
deploy/ci/: sil-scan.yml
deploy/docker/: docker-compose.yml
deploy/docker/api/: Dockerfile
deploy/docker/worker/: Dockerfile  worker.py
deploy/k8s/: api-deployment.yaml  api-service.yaml  hpa.yaml  ingress.yaml  redis-deployment.yaml  worker-deployment.yaml
deploy/monitoring/: grafana-dashboard.json  loki-config.yml  prometheus.yml
docs/: api.md  architecture.md  security-model.md
infra/docker/: worker.Dockerfile
infra/terraform/: main.tf
integrations/git-hooks/: pre-commit  pre-push
integrations/github-actions/: sil-scan.yml
integrations/pr-analyzer/: analyzer.py
integrations/repo-audit/: audit.py
scripts/: run.sh  setup.sh
tests/unit/: test_normalizer.py
worker/: sil_queue.py  worker.py
