[workspace]
members = [
    "crates/sil-normalizer",
    "crates/sil-confusable",
    "crates/sil-semantic",
    "crates/sil-policy",
    "crates/sil-cli"
]

resolver = "2"

[patch.crates-io]
sil-normalizer = { path = "crates/sil-normalizer" }
sil-confusable = { path = "crates/sil-confusable" }
sil-semantic = { path = "crates/sil-semantic" }
sil-policy = { path = "crates/sil-policy" }
