[package]
name = "sil-policy"
version = "0.1.0"
edition = "2024"
description = "Policy evaluation engine for the Semantic Integrity Layer — risk scoring and Allow/Warn/Block/Rewrite decisions"
license = "MIT"
repository = "https://github.com/nrelab/SIL"
homepage = "https://github.com/nrelab/SIL"
documentation = "https://docs.rs/sil-policy"
categories = ["text-processing", "security"]
keywords = ["policy", "risk", "security", "decision", "unicode"]

[dependencies]
